--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: user/app:latest
+          tags: matthewmargelony/veracode-bulkupload-rest:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}          
