--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ on:
         description: 'Testing Tags'
 
 jobs:
-  build:
+  docker-push:
     runs-on: windows-2019
     steps:
       -
-        name: Checkout
+        name: Checkout Code
         uses: actions/checkout@v2
 #      -
 #        name: Set up QEMU
@@ -28,14 +28,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      -
+#        name: Docker Push
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile
+#          push: true
+#          tags: matthewmargelony/veracode-bulkupload-rest:latest
       -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: matthewmargelony/veracode-bulkupload-rest:latest
+        name: Docker Push
+        run: |
+          docker push matthewmargelony/veracode-bulkupload-rest:latest .
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}          
