--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       -
         name: Docker Push
         run: |
-          docker push matthewmargelony/veracode-bulkupload-rest:latest .
+          docker push matthewmargelony/veracode-bulkupload-rest:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}          
